--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,4 +10,8 @@
  *
  *= require_self
  *= require_tree .
+ *= require bootstrap
+ *= require bootstrap.min
+ *= require bootstrap-responsive.min
+ *= require sunrise
  */
