--- a/app/views/registered/new.html.erb
+++ b/app/views/registered/new.html.erb
@@ -1,24 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Levar.me - Coming Soon</title>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <!-- Custom font from Google Web Fonts -->
-  <link href="http://fonts.googleapis.com/css?family=PT+Sans:700,400&subset=cyrillic" rel="stylesheet">
-
-  <!-- Bootstrap stylesheets -->
-  <link href="assets/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/bootstrap-responsive.min.css" rel="stylesheet">
-
-  <!-- Template stylesheet -->
-  <link href="assets/sunrise.css" rel="stylesheet">
-</head>
-
-<body>
 <div class="container">
   <h1 class="site-heading">Levar.<span style="color: #91D8F7">me</span></h1>
 
@@ -29,7 +8,21 @@
       <div class="subscribe-submit-container">
         <%= e.submit :class => "subscribe-submit btn btn-large btn-inverse", :id => "subscribe", :value => "SUBSCRIBE" %>
       </div>
+      <% if flash[:error] -%>
+          <p id="subscribe-tooltip" class="subscribe-tooltip error" style="display: block;">
+              <%=h flash[:error] %>
+          </p>
+      <% end -%>
+      <% if flash[:success] -%>
+          <p id="subscribe-tooltip" class="subscribe-tooltip success" style="display: block;">
+              <%=h flash[:success] %>
+          </p>
+      <% end -%>
   <% end %>
+
+  <% if flash[:notice] -%>
+      <p class='notice'><%=h flash[:notice] %></p>
+  <% end -%>
 
   <!-- Countdown -->
   <div id="countdown" class="countdown">
@@ -55,11 +48,3 @@
   </div>
   <!-- /Countdown -->
 </div>
-
-<!-- Scripts -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="/assets/jquery.countdown.js"></script>
-<script src="/assets/main.config.js"></script>
-<script src="/assets/sunrise.js"></script>
-</body>
-</html>
