--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,5 @@
  *= require_tree .
  *= require bootstrap
  *= require bootstrap.min
- *= require bootstrap-responsive.min
- *= require sunrise
+ *= require style
  */
