--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Levar.me - Coming Soon</title>
-
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-
-  <!-- Custom font from Google Web Fonts -->
-  <link href="http://fonts.googleapis.com/css?family=PT+Sans:700,400&subset=cyrillic" rel="stylesheet">
 
   <%= stylesheet_link_tag    'application', :media => "all" %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <!-- Title here -->
+  <title>Levar.me</title>
+
+  <!-- Fonte Open Sans -->
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
+  <!-- Description, Keywords and Author -->
+  <meta name="description" content="We group people towards a common destination">
+  <meta name="keywords" content="ridesharing taxi party">
+  <meta name="author" content="Levar.me">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Styles -->
+  <!-- Bootstrap CSS -->
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="css/style.css" rel="stylesheet">
 
 
 
