--- a/app/views/registered/new.html.erb
+++ b/app/views/registered/new.html.erb
@@ -87,7 +87,7 @@
         <div class="shotcontent">
           <h3>It's cheaper <span class="text-muted"> and an experience</span></h3>
           <p class="shot-para">However you decide to get there, we're happy you'll be having a cheaper and more fulfilling experience </p>
-          <p class="shot-para">By connecting to your Facebook, you'll be shown friends, and friends of friends, so you'll safer and have an ice-breaker </p>
+          <p class="shot-para">By connecting to your Facebook, you'll be shown friends, and friends of friends, so you'll feel safer and have an ice-breaker </p>
           <p class="shot-para"> Sharing a cab ride, or sharing someone's car you'll be part of a tight trusting community. </p>
           <hr>
         </div>
