--- a/app/views/registered/new.html.erb
+++ b/app/views/registered/new.html.erb
@@ -28,8 +28,8 @@
             <p><%=t :first_title %></p><br>
             <%= form_for(@registered, :url => {:action => 'create'}, :html => { :class => "form-register" }) do |e| %>
                 <div class="input-append">
-                  <%= e.text_field :email, :maxlength => 50, :placeholder => 'Insert your email to join the beta', :class => 'span2' %>
-                  <%= e.submit :class => 'btn btn-success', :value => 'Join' %>
+                  <%= e.text_field :email, :maxlength => 50, :placeholder => t(:insert_email), :class => 'span2' %>
+                  <%= e.submit :class => 'btn btn-success', :value => t(:join) %>
                 </div>
                 <% if flash[:error] -%>
                     <p style="color: #da4f49">
@@ -62,7 +62,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="screenshot">
-          <%= image_tag 'f2.png', :class => 'img-responsive' %>
+          <img src="<%=t :iphone1 %>" class="img-responsive" />
         </div>
       </div>
       <div class="col-md-8">
@@ -93,7 +93,7 @@
       </div>
       <div class="col-md-4">
         <div class="screenshot">
-          <%= image_tag 'f3.png', :class => 'img-responsive' %>
+          <img src="<%=t :iphone2 %>" class="img-responsive" />
         </div>
       </div>
     </div>
@@ -104,7 +104,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="screenshot">
-          <%= image_tag 'f4.png', :class => 'img-responsive' %>
+          <img src="<%=t :iphone3 %>" class="img-responsive" />
         </div>
       </div>
       <div class="col-md-8">
