mudando a foto de capa

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -96,7 +96,7 @@ hr{
 
 .top{
 	position: relative;
-    background: url('../assets/jk-capa5.jpg') no-repeat center center;
+    background: url('../assets/jk-capa-filtro-escuro.jpg') no-repeat center center;
   	-webkit-background-size: cover;
 	-o-background-size: cover;
 	-moz-background-size: cover;
