meta tags do facebook

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,10 @@
   <meta name="description" content="We group people towards a common destination">
   <meta name="keywords" content="ridesharing taxi party">
   <meta name="author" content="Levar.me">
+  <meta property="og:title" content="Levar.me"/>
+  <meta property="og:image" content="https://lh3.ggpht.com/p_mh4fKiaV6osuigL-_4gJmFsLQHSi2hzavKs4LkQvbwCl0P7j3AsLQ3HeYFBwHb7KQ=w300-rw"/>
+  <meta property="og:site_name" content="Levar.me"/>
+  <meta property="og:description" content="We group people towards a common destination"/>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
