meta tags do facebook

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   <meta name="keywords" content="ridesharing taxi party">
   <meta name="author" content="Levar.me">
   <meta property="og:title" content="Levar.me"/>
-  <meta property="og:image" content="https://lh3.ggpht.com/p_mh4fKiaV6osuigL-_4gJmFsLQHSi2hzavKs4LkQvbwCl0P7j3AsLQ3HeYFBwHb7KQ=w300-rw"/>
+  <meta property="og:image" content="http://i.imgur.com/IruJ6fu.png"/>
   <meta property="og:site_name" content="Levar.me"/>
   <meta property="og:description" content="We group people towards a common destination"/>
 
